--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (1:0.091-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 15 Apr 2009 00:35:51 +0100
+
 redis (1.0~beta8-1) experimental; urgency=low
 
   * New upstream release.
