--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 redis (1:0.094-2) UNRELEASED; urgency=low
 
   * Upload to unstable.
+  * Add libredis-perl package.
 
  -- Chris Lamb <lamby@debian.org>  Wed, 06 May 2009 00:15:34 +0100
 
