--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-redis (1:0.094-3) UNRELEASED; urgency=low
+redis (1:0.094-3) unstable; urgency=low
 
   * Really upload to unstable - I give "debchange -r" less credit than it
     deserves.
 
- -- Chris Lamb <lamby@debian.org>  Thu, 07 May 2009 22:00:50 +0100
+ -- Chris Lamb <lamby@debian.org>  Thu, 07 May 2009 22:02:24 +0100
 
 redis (1:0.094-2) experimental; urgency=low
 
