--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (1:0.100-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 28 May 2009 00:13:31 +0100
+
 redis (1:0.096-1) unstable; urgency=low
 
   * New upstream version.
