--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 redis (1:0.100-1) UNRELEASED; urgency=low
 
   * New upstream release.
+    - Update debian/redis.conf
 
  -- Chris Lamb <lamby@debian.org>  Thu, 28 May 2009 00:13:31 +0100
 
