--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (1:0.900-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 17 Jun 2009 09:57:43 +0100
+
 redis (1:0.100-1) unstable; urgency=low
 
   * New upstream release.
