Recommend modifying /etc/sysctl.conf instead of using "boot scripts"

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ redis (1:0.900-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Update versionmangle in debian/watch.
+  * "/proc/sys/vm/overcommit_memory" message:
+    - Recommend modifying /etc/sysctl.conf instead of using "boot scripts"
 
  -- Chris Lamb <lamby@debian.org>  Wed, 17 Jun 2009 09:57:43 +0100
 
