--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ redis (1:0.900-1) UNRELEASED; urgency=low
   * Update versionmangle in debian/watch.
   * "/proc/sys/vm/overcommit_memory" message:
     - Recommend modifying /etc/sysctl.conf instead of using "boot scripts"
+    - Warn after daemonising to avoid message being spammed on every boot.
 
  -- Chris Lamb <lamby@debian.org>  Wed, 17 Jun 2009 09:57:43 +0100
 
