--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-redis (1:0.900-1) UNRELEASED; urgency=low
+redis (1:0.900-1) unstable; urgency=low
 
   * New upstream release.
     - Update debian/redis.conf
@@ -7,7 +7,7 @@ redis (1:0.900-1) UNRELEASED; urgency=low
     - Recommend modifying /etc/sysctl.conf instead of using "boot scripts"
     - Warn after daemonising to avoid message being spammed on every boot.
 
- -- Chris Lamb <lamby@debian.org>  Wed, 17 Jun 2009 09:57:43 +0100
+ -- Chris Lamb <lamby@debian.org>  Wed, 17 Jun 2009 10:39:57 +0100
 
 redis (1:0.100-1) unstable; urgency=low
 
