--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+redis (1:0.900-2) UNRELEASED; urgency=low
+
+  * Add patch to avoid mangling the stacktrace on SIGSEGV using X86-specific
+    ucontext struct, etc. (Closes: #533763)
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 24 Jun 2009 00:44:00 +0100
+
 redis (1:0.900-1) unstable; urgency=low
 
   * New upstream release.
