--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-redis (1:0.900-2) UNRELEASED; urgency=low
+redis (1:0.900-2) unstable; urgency=low
 
   * Add patch to avoid mangling the stacktrace on SIGSEGV using X86-specific
     ucontext struct, etc. (Closes: #533763)
   * Bump Standards-Version to 3.8.2.
 
- -- Chris Lamb <lamby@debian.org>  Wed, 24 Jun 2009 00:44:00 +0100
+ -- Chris Lamb <lamby@debian.org>  Wed, 24 Jun 2009 23:54:42 +0100
 
 redis (1:0.900-1) unstable; urgency=low
 
