--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 redis (1:0.900-3) UNRELEASED; urgency=low
 
+  * Actually add architecture patch introducted in 1:0.900-2 to quilt 'series'
+    (Closes: #533763)
   * Correct "/proc/sys/vm/overcommit_memory" message to print the correct
     string to add to sysctl.conf.
 
