--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (1:1.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 08 Sep 2009 21:58:31 +0100
+
 redis (1:0.900-3) unstable; urgency=low
 
   * Actually add architecture patch introducted in 1:0.900-2 to quilt 'series'
