--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 redis (1:1.0-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Bump Standards-Version to 3.8.3.
 
  -- Chris Lamb <lamby@debian.org>  Tue, 08 Sep 2009 21:58:31 +0100
 
