--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ redis (1:1.0-1) UNRELEASED; urgency=low
   * Drop 01-recommend-sysctl-conf.diff; applied upstream.
   * Drop 02-warn-after-daemonising.diff; applied upstream.
   * Drop 03-only-mangle-trace-on-ia64-and-x86.diff; applied upstream.
+  * Drop quilt Build-Depends and remove patches/series.
 
  -- Chris Lamb <lamby@debian.org>  Tue, 08 Sep 2009 21:58:31 +0100
 
