--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-redis (1:1.0-1) UNRELEASED; urgency=low
+redis (1:1.0-1) unstable; urgency=low
 
   * New upstream release.
   * Bump Standards-Version to 3.8.3.
@@ -9,7 +9,7 @@ redis (1:1.0-1) UNRELEASED; urgency=low
     - Drop quilt Build-Depends and remove patches/series.
   * Use "override_dh_auto_clean" instead of "clean" target.
 
- -- Chris Lamb <lamby@debian.org>  Tue, 08 Sep 2009 21:58:31 +0100
+ -- Chris Lamb <lamby@debian.org>  Tue, 08 Sep 2009 22:09:19 +0100
 
 redis (1:0.900-3) unstable; urgency=low
 
