--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
-redis (1:1.02-2) UNRELEASED; urgency=low
+redis (2:1.1.90~beta-1) UNRELEASED; urgency=low
 
   * Modify debian/watch to consider "-beta" the same as "~beta" for correct
     dpkg ordering.
+  * New upstream release. We bump the epoch as dpkg considers 1.1.90 to be less
+    than 1.02.
 
- -- Chris Lamb <lamby@debian.org>  Sat, 05 Dec 2009 21:45:12 +0000
+ -- Chris Lamb <lamby@debian.org>  Sat, 05 Dec 2009 21:45:38 +0000
 
 redis (1:1.02-1) unstable; urgency=low
 
