--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ redis (2:1.1.90~beta-1) UNRELEASED; urgency=low
     dpkg ordering.
   * New upstream release. We bump the epoch as dpkg considers 1.1.90 to be less
     than 1.02.
+  * Don't build client libraries anymore; not part of the upstream tarball
+    anymore.
 
  -- Chris Lamb <lamby@debian.org>  Sat, 05 Dec 2009 21:45:38 +0000
 
