Don't export CFLAGS from debian/rules to prevent FTBFS when dpkg-provided CFLAGS does not include --std=c99.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ redis (2:1.1.90~beta-1) UNRELEASED; urgency=low
     than 1.02.
   * Don't build client libraries anymore; not part of the upstream tarball
     anymore.
+  * Don't export CFLAGS from debian/rules to prevent FTBFS when dpkg-provided
+    CFLAGS does not include --std=c99.
 
  -- Chris Lamb <lamby@debian.org>  Sat, 05 Dec 2009 21:45:38 +0000
 
