--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ redis (2:1.1.90~beta-1) UNRELEASED; urgency=low
 
   * New upstream release. We bump the epoch as dpkg considers 1.1.90 to be less
     than 1.02.
+    - Sync redis.conf
   * Don't build client libraries anymore; not part of the upstream tarball
     anymore.
   * Don't export CFLAGS from debian/rules to prevent FTBFS when dpkg-provided
