--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:1.1.95~beta-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Sun, 10 Jan 2010 22:51:21 +0000
+
 redis (2:1.1.90~beta-1) unstable; urgency=low
 
   * New upstream release:
