--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-redis (2:1.1.95~beta-1) UNRELEASED; urgency=low
+redis (2:1.1.95~beta-1) unstable; urgency=low
 
   * New upstream release.
   * Sync debian/redis.conf with upstream version (new "rdbcompression" and
     "masterauth" commands).
 
- -- Chris Lamb <lamby@debian.org>  Sun, 10 Jan 2010 22:51:21 +0000
+ -- Chris Lamb <lamby@debian.org>  Sun, 10 Jan 2010 22:59:06 +0000
 
 redis (2:1.1.90~beta-1) unstable; urgency=low
 
