--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:1.1.95~beta-2) UNRELEASED; urgency=low
+
+  * Set source section to "database" from "misc".
+
+ -- Chris Lamb <lamby@debian.org>  Sun, 10 Jan 2010 23:22:50 +0000
+
 redis (2:1.1.95~beta-1) unstable; urgency=low
 
   * New upstream release.
