--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-redis (2:1.1.95~beta-2) UNRELEASED; urgency=low
+redis (2:1.1.95~beta-2) unstable; urgency=low
 
   * Set source section to "database" from "misc".
   * Add redis-cli binary to "redis-server" package.
 
- -- Chris Lamb <lamby@debian.org>  Sun, 10 Jan 2010 23:22:50 +0000
+ -- Chris Lamb <lamby@debian.org>  Wed, 13 Jan 2010 23:36:30 +0000
 
 redis (2:1.1.95~beta-1) unstable; urgency=low
 
