--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:1.2.0-1) UNRELEASED; urgency=low
+
+  * New upstream stable release.
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 14 Jan 2010 15:41:42 +0000
+
 redis (2:1.1.95~beta-2) unstable; urgency=low
 
   * Set source section to "database" from "misc".
