--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-redis (2:1.2.0-1) UNRELEASED; urgency=low
+redis (2:1.2.0-1) unstable; urgency=low
 
   * New upstream stable release.
   * Switch to dpkg-source 3.0 (quilt) format.
   * Patch out printing of pid on startup.
 
- -- Chris Lamb <lamby@debian.org>  Thu, 14 Jan 2010 15:41:42 +0000
+ -- Chris Lamb <lamby@debian.org>  Thu, 14 Jan 2010 15:50:36 +0000
 
 redis (2:1.1.95~beta-2) unstable; urgency=low
 
