--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+redis (2:1.2.0-2) UNRELEASED; urgency=low
+
+  * Add Bash completion script for redis-cli by Steve Kemp <skx@debian.org>.
+    (Closes: #565358)
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 09 Feb 2010 14:14:38 +0000
+
 redis (2:1.2.0-1) unstable; urgency=low
 
   * New upstream stable release.
