--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ redis (2:1.2.0-2) UNRELEASED; urgency=low
 
   * Add Bash completion script for redis-cli by Steve Kemp <skx@debian.org>.
     (Closes: #565358)
+  * Bump Standards-Version to 3.8.4.
 
  -- Chris Lamb <lamby@debian.org>  Tue, 09 Feb 2010 14:14:38 +0000
 
