--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-redis (2:1.2.1-1) UNRELEASED; urgency=low
+redis (2:1.2.1-1) unstable; urgency=low
 
   * New upstream release.
   * Add Bash completion script for redis-cli by Steve Kemp <skx@debian.org>.
@@ -6,7 +6,7 @@ redis (2:1.2.1-1) UNRELEASED; urgency=low
   * Bump Standards-Version to 3.8.4.
   * Add $remote_fs to LSB "Required-{Start,Stop}" initscript headers.
 
- -- Chris Lamb <lamby@debian.org>  Tue, 09 Feb 2010 14:25:44 +0000
+ -- Chris Lamb <lamby@debian.org>  Tue, 09 Feb 2010 14:37:32 +0000
 
 redis (2:1.2.0-1) unstable; urgency=low
 
