--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:1.2.2-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 18 Feb 2010 22:00:02 +0000
+
 redis (2:1.2.1-1) unstable; urgency=low
 
   * New upstream release.
