--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:1.2.3-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 02 Mar 2010 16:43:43 +0000
+
 redis (2:1.2.2-2) unstable; urgency=low
 
   * Really fix segfault in dupClientReplyValue. (Closes: #570371)
