--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:1.2.5-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 11 Mar 2010 21:29:58 +0000
+
 redis (2:1.2.4-1) unstable; urgency=low
 
   * New upstream release.
