--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 redis (2:1.2.5-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Drop 02-fix-segfault-indupClientReplyValue.diff; applied upstream via
+    <http://code.google.com/p/redis/issues/detail?id=177>.
 
  -- Chris Lamb <lamby@debian.org>  Thu, 11 Mar 2010 21:29:58 +0000
 
