--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.0.0~rc1-1) UNRELEASED; urgency=low
+
+  * New upstream release candidate.
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 01 Jun 2010 10:42:00 +0100
+
 redis (2:1.2.6-1) unstable; urgency=low
 
   * New upstream release.
