--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 redis (2:2.0.0~rc1-1) UNRELEASED; urgency=low
 
   * New upstream release candidate.
+  * Remove '01-dont-print-pid-on-startup.diff' patch.
 
  -- Chris Lamb <lamby@debian.org>  Tue, 01 Jun 2010 10:42:00 +0100
 
