Add 'status' command to initscript.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.0.0~rc1-2) UNRELEASED; urgency=low
+
+  * Add 'status' command to initscript.
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 01 Jun 2010 14:13:53 +0100
+
 redis (2:2.0.0~rc1-1) experimental; urgency=low
 
   * New upstream release candidate.
