--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 redis (2:2.0.0~rc1-2) UNRELEASED; urgency=low
 
   * Add 'status' command to initscript.
+  * Add redis-benchmark (and manpage) to package. (Closes: #587395)
 
  -- Chris Lamb <lamby@debian.org>  Tue, 01 Jun 2010 14:13:53 +0100
 
