--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-redis (2:2.0.0~rc1-2) UNRELEASED; urgency=low
+redis (2:2.0.0~rc1-2) experimental; urgency=low
 
   * Add 'status' command to initscript.
   * Add redis-benchmark (and manpage) to package. (Closes: #587395)
 
- -- Chris Lamb <lamby@debian.org>  Tue, 01 Jun 2010 14:13:53 +0100
+ -- Chris Lamb <lamby@debian.org>  Mon, 28 Jun 2010 11:02:31 +0100
 
 redis (2:2.0.0~rc1-1) experimental; urgency=low
 
