--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.0.0~rc3-1) UNRELEASED; urgency=low
+
+  * New upstream RC release.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 23 Jul 2010 11:50:37 +0100
+
 redis (2:2.0.0~rc2-1) experimental; urgency=low
 
   * New upstream RC release.
