--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 redis (2:2.0.0~rc4-1) UNRELEASED; urgency=low
 
   * New upstream RC release.
+  * Bump Standards-Version to 3.9.1.
 
  -- Chris Lamb <lamby@debian.org>  Thu, 29 Jul 2010 09:00:49 -0400
 
