--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.0.1-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 10 Sep 2010 14:26:17 +0100
+
 redis (2:2.0.0~rc4-1) experimental; urgency=low
 
   * New upstream RC release.
