--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 redis (2:2.0.1-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Update debian/watch to not match old tarballs.
 
  -- Chris Lamb <lamby@debian.org>  Fri, 10 Sep 2010 14:26:17 +0100
 
