--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.0.1-2) unstable; urgency=low
+
+  * Upload to unstable.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 10 Sep 2010 14:49:17 +0100
+
 redis (2:2.0.1-1) experimental; urgency=low
 
   * New upstream release.
