--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-redis (2:2.2.1-1) UNRELEASED; urgency=low
+redis (2:2.2.1-1) unstable; urgency=low
 
   * New upstream release. (Closes: #604076)
   * Update install paths.
 
- -- Chris Lamb <lamby@debian.org>  Thu, 24 Feb 2011 19:23:57 +0000
+ -- Chris Lamb <lamby@debian.org>  Thu, 24 Feb 2011 19:39:43 +0000
 
 redis (2:2.0.1-2) unstable; urgency=low
 
