--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+redis (2:2.2.1-2) UNRELEASED; urgency=low
+
+  * Use userdel over deluser to prevent problems when purging package.
+    (Closes: #618326)
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 15 Mar 2011 10:57:25 +0000
+
 redis (2:2.2.1-1) unstable; urgency=low
 
   * New upstream release. (Closes: #604076)
