--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.2.4-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 22 Apr 2011 14:04:49 +0100
+
 redis (2:2.2.2-1) unstable; urgency=low
 
   * New upstream release.
