--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.2.5-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 25 Apr 2011 14:03:45 +0100
+
 redis (2:2.2.4-1) unstable; urgency=low
 
   * New upstream release.
