--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-redis (2:2.2.5-1) UNRELEASED; urgency=low
+redis (2:2.2.5-1) unstable; urgency=low
 
   * New upstream release.
 
- -- Chris Lamb <lamby@debian.org>  Mon, 25 Apr 2011 14:03:45 +0100
+ -- Chris Lamb <lamby@debian.org>  Mon, 25 Apr 2011 14:04:29 +0100
 
 redis (2:2.2.4-1) unstable; urgency=low
 
