--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.2.8-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 07 Jun 2011 16:32:15 +0100
+
 redis (2:2.2.5-1) unstable; urgency=low
 
   * New upstream release.
