--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.2.10-2) UNRELEASED; urgency=low
+
+  * Correct spelling of "Description" in patch system.
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 27 Jun 2011 17:11:14 +0100
+
 redis (2:2.2.10-1) unstable; urgency=low
 
   * New upstream release.
