--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.2.12-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 27 Jul 2011 18:49:58 +0200
+
 redis (2:2.2.11-3) unstable; urgency=low
 
   * Change default loglevel to "notice".
