--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ redis (2:2.2.12-1) UNRELEASED; urgency=low
   * Move runtime files to /var/run/redis/ and set that as default location for
     socket file. Thanks to Sandro Tosi <morph@debian.org>. (Closes: #632931)
   * Refresh fix-link-ordering patch.
+  * Use "defined(__linux__) || defined(__GLIBC__)" for kfreebsd compatibility.
+    Thanks to Robert Millan <rmh@debian.org>. (Closes: #632499)
 
  -- Chris Lamb <lamby@debian.org>  Wed, 27 Jul 2011 18:49:58 +0200
 
