--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 redis (2:2.4.0~rc5-1) UNRELEASED; urgency=low
 
   * New upstream RC release.
+  * Update debian/redis.conf.
 
  -- Chris Lamb <lamby@debian.org>  Fri, 29 Jul 2011 21:03:55 +0200
 
