--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ redis (2:2.4.0~rc5-1) UNRELEASED; urgency=low
 
   * New upstream RC release.
   * Update debian/redis.conf.
+  * Drop documentation package - dropped upstream.
 
  -- Chris Lamb <lamby@debian.org>  Fri, 29 Jul 2011 21:03:55 +0200
 
