--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-redis (2:2.4.0~rc5-1) UNRELEASED; urgency=low
+redis (2:2.4.0~rc5-1) experimental; urgency=low
 
   * New upstream RC release.
   * Update debian/redis.conf.
   * Drop documentation package - dropped upstream.
 
- -- Chris Lamb <lamby@debian.org>  Fri, 29 Jul 2011 21:03:55 +0200
+ -- Chris Lamb <lamby@debian.org>  Fri, 29 Jul 2011 21:41:25 +0200
 
 redis (2:2.2.12-1) unstable; urgency=low
 
