--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+redis (2:2.2.12-1ubuntu1) lucid; urgency=low
+
+  * Fork for lucid 
+
+ -- Jonsd Pfenniger <jonas@pfenniger.name>  Thu, 04 Aug 2011 07:17:23 -0700
+
 redis (2:2.2.12-1) unstable; urgency=low
 
   * New upstream release.
